Bugfix for contact link

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <p>
             &copy; 2023 CM-Social.com &middot;
             Kontakt: info@cm-social.com /
-            <a href="toot.cm-social.com/@Djheiko" target="_blank">@Djheiko@toot.cm-social.com</a> /
+            <a href="https://toot.cm-social.com/@Djheiko" target="_blank">@Djheiko@toot.cm-social.com</a> /
             <a href="https://norden.social/@thomas_behrens" target="_blank">@thomas_behrens@norden.social</a>
         </p>
       </footer>
